# chapitre2-aws-foundation

./: .gitignore  Makefile  README.md  main.tf  pyproject.toml  verify_aws_infra.py  verify_aws_setup.py
